--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@langchain/openai": "^0.3.15",
+    "@langchain/community": "^0.3.56",
     "@langchain/core": "^0.3.70",
-    "langchain": "^0.3.7",
+    "@langchain/openai": "^0.3.15",
     "dotenv": "^16.4.7",
+    "faiss-node": "^0.5.1",
+    "langchain": "^0.3.7",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
